force-app/main/default/objects/Test_Data__c/Test_Data__c.object-meta.xml
<CustomObject>
    <label>Test Data</label>
    <nameField>
        <label>Test Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Datas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>