force-app/main/default/objects/Test_Data__c/fields/Test_Data_Availability__c.field-meta.xml
<CustomField>
    <fullName>Test_Data_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Data Availability</label>
    <type>Checkbox</type>
</CustomField>