force-app/main/default/objects/Test_Data__c/fields/Test_Data_User__c.field-meta.xml
<CustomField>
    <fullName>Test_Data_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Data User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>