force-app/main/default/objects/Test_Data__c/fields/Test_Object__c.field-meta.xml
<CustomField>
    <fullName>Test_Object__c</fullName>
    <label>Test Object</label>
    <referenceTo>Test_Object__c</referenceTo>
    <relationshipLabel>Test Datas</relationshipLabel>
    <relationshipName>Test_Datas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>