force-app/main/default/objects/Test_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_Data_User__c</columns>
    <columns>Test_Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>